--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,33 @@
 To email a contributor remove "DELETE" from the email address.
 (The DELETEs are necessary as this list is published online.)
 
-2021/07/14 Jeffrey Fulmer http://www.joedog.org/support/
+2022/04/18 Jeffrey Fulmer https://www.joedog.org/support/
+ * src/memory.c           Added xstrncpy, xstrncat
+ * src/memory.h           Added xstrncpy, xstrncat
+ * src/cookies.c          Implemented new x* functions
+ * src/ssl.c              Silenced compiler warning
+ * src/main.c             Added xstrncpy to silence warnings
+ * src/version.c          Version increment: 4.1.3
+
+2022/04/18 Frank Ledo  via https://github.com/FrankLedo
+ * doc/siege.pod          Fixed a typo in the man page
+
+2022/04/08 barryhunter via https://github.com/barryhunter
+ * src/parser.c           Refined match for META redirect 
+
+2022/03/21 cui fliter https://github.com/cuishuang
+ * src/browser.c          Fixed typos
+ * src/date.c             Fixed typos
+ * src/url.c              Fixed typos
+ * utils/siege2csv.in     Fixed typos
+
+2022/03/17 Jeffrey Fulmer https://www.joedog.org/support/
+ * src/main.c             Silenced statistics output on -g/--get
+ * src/cookies.c          Improved domain matching, added my.get 
+ * src/ssl.c              Silenced a compiler warning
+ * src/version.c          Version increment: 4.1.2
+
+2021/07/14 Jeffrey Fulmer https://www.joedog.org/support/
  * src/browser.c          Added HTTP response 201 handler
  * src/response.c         Added Content-Location handler
  * src/response.h         Added CONTENT_LOCATION value
@@ -13,7 +39,7 @@ To email a contributor remove "DELETE" from the email address.
  * src/util.c             Fixed np_phtread_usleep for Solaris
  * src/version.c          Version increment: 4.1.1
 
-2021/07/07 Jeffrey Fulmer http://www.joedog.org/support/
+2021/07/07 Jeffrey Fulmer https://www.joedog.org/support/
  * src/url.c              Removed leading / from ftp paths
 
 2021/07/07 midchildan https://github.com/midchildan
